# NN_training

./: README.md  layer.py  pyproject.toml
