[tool.poetry]
name = "nn_training"
version = "0.1.0"
description = "neural network classifier using numpy"
authors = ["Olli-Pekka Tikkasalo"]

[tool.poetry.dependencies]
python = "3.9.6"
numpy = "^1.21.2"
matplotlib = "^3.4.3"

[tool.poetry.dev-dependencies]
pylint = "^2.10.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
